--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -4036,6 +4036,9 @@
     <!-- Title text to show within the overlay.  [CHAR LIMIT=50] -->
     <string name="display_manager_overlay_display_title"><xliff:g id="name">%1$s</xliff:g>: <xliff:g id="width">%2$d</xliff:g>x<xliff:g id="height">%3$d</xliff:g>, <xliff:g id="dpi">%4$d</xliff:g> dpi</string>
 
+    <!-- Title text to append when the display is secure.  [CHAR LIMIT=30] -->
+    <string name="display_manager_overlay_display_secure_suffix">, secure</string>
+
     <!-- Title of the notification to indicate an active wifi display connection.  [CHAR LIMIT=50] -->
     <string name="wifi_display_notification_title">Wireless display is connected</string>
     <!-- Message of the notification to indicate an active wifi display connection.  [CHAR LIMIT=80] -->
